twilio verification ready

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -33,6 +33,7 @@
   <ul>
     <li>Your mobile phone number</li>
     <li>Your name (if provided)</li>
+    <li>Your email (if provided)</li>
     <li>Appointment details (date, time)</li>
   </ul>
 
@@ -46,13 +47,22 @@
   <p>We do not  use your number for marketing or promotional messages.</p>
 
   <h2>3. Consent and Opt-Out</h2>
-  <p>We only send messages to users who have provided explicit consent during direct conversations via Instagram or text. Consent is recorded when you agree to receive SMS notifications after being informed about their purpose.</p>
-  <p>You may withdraw your consent and opt out of receiving SMS messages at any time by:</p>
-  <ul>
-    <li>Messaging us on Instagram</li>
-    <li>Texting us directly to request removal</li>
-  </ul>
-  <p>Once your opt-out request is received, we will stop all SMS communication immediately.</p>
+<p>
+  We only collect and use personal information that you voluntarily provide during direct interactions, such as through Instagram messages or text communication. By providing your information, you consent to its use for the purpose of facilitating our services and communications, as described.
+</p>
+
+<p>
+  You may withdraw your consent and request the removal of your personal information at any time by:
+</p>
+<ul>
+  <li>Messaging us on Instagram</li>
+  <li>Contacting us directly with your request</li>
+</ul>
+
+<p>
+  Upon receiving your request, we will promptly delete your information and cease further communication.
+</p>
+
 
   <h2>4. Sharing of Information</h2>
   <p>We do not share, sell, or disclose your personal information, including your phone number, to third parties. Your information is kept strictly confidential.</p>
