--- a/public/optin.html
+++ b/public/optin.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <title>SMS Consent – UR Nail Boutique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet" />
+    
+
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -41,8 +44,7 @@
     </p>
 
     <blockquote>
-      “Can I get your mobile number so we can also send you an appointment
-      confirmation via SMS?”
+      “I would need your First and Last Name, your mobile number and a deposit to book your appointment”
     </blockquote>
 
     <p>After receiving the number, we follow up with:</p>
@@ -83,22 +85,44 @@
 
     <h2>Your Privacy</h2>
     <p>
-      Your phone number is only used for appointment notifications and never
-      shared with third parties. For details, see our
-      <a href="#">Privacy Policy</a>.
+    We only use collected phone numbers to send appointment-related text messages. These numbers are never used for marketing or shared with third parties. All SMS communication is initiated by direct client request during appointment booking.
+    </p>
+    <p>
+    Phone numbers are securely stored and only accessed by authorized team members responsible for scheduling. Clients may opt out at any time, and we immediately honor all such requests.
+    </p>
+    <p>
+    For full details, please see our <a href="http://urnailboutique.com/privacy">Privacy Policy</a>.
     </p>
 
-    <h2>Example Conversation Screenshot</h2>
-    <p>
-      [Insert a screenshot here showing an example DM conversation where you
-      collect a number and confirm SMS use.]
-    </p>
+<h2>Example Conversation Screenshots</h2>
+<p>Below are examples of actual DM conversations showing how we collect phone numbers and inform about SMS communication:</p>
+
+  <div style="display: flex; flex-wrap: wrap; gap: 10px;">
+    <a href="/images/IMG_4069.png" data-lightbox="dm-examples" data-title="Screenshot 4069" target="_blank">
+      <img src="/images/IMG_4069.png" alt="Screenshot 4069" style="width: 150px; height: auto;" />
+    </a>
+
+    <a href="/images/IMG_4072.png" data-lightbox="dm-examples" data-title="Screenshot 4072" target="_blank">
+      <img src="/images/IMG_4072.png" alt="Screenshot 4072" style="width: 150px; height: auto;" />
+    </a>
+
+    <a href="/images/IMG_4067.png" data-lightbox="dm-examples" data-title="Screenshot 4067" target="_blank">
+      <img src="/images/IMG_4067.png" alt="Screenshot 4067" style="width: 150px; height: auto;" />
+    </a>
+
+    <a href="/images/IMG_4071.png" data-lightbox="dm-examples" data-title="Screenshot 4071" target="_blank">
+      <img src="/images/IMG_4071.png" alt="Screenshot 4071" style="width: 150px; height: auto;" />
+    </a>
+
+    <a href="/images/IMG_4068.png" data-lightbox="dm-examples" data-title="Screenshot 4068" target="_blank">
+      <img src="/images/IMG_4068.png" alt="Screenshot 4068" style="width: 150px; height: auto;" />
+    </a>
+  </div>
 
     <p>
       If you have any questions, please message us at
-      <a href="https://instagram.com/ur.nail.boutique" target="_blank"
-        >@yourbiz</a
-      >.
+      <br>
+        Instagram: <a href="https://instagram.com/ur.nail.boutique" target="_blank">@urnailboutique</a><br>
     </p>
   </body>
 </html>
